more refactoring after review
Signed-off-by: Stanislav Trailov <Stanislav.Trailov@bosch.io>